--- a/index.html
+++ b/index.html
@@ -25,10 +25,22 @@
             </div>
         </div>
     </div>
+    <div class="row" style="margin-top: 500px">
+        <div class="col-4">
+            <div class="demo2">
+                Some text
+                <p>paragraph</p>
+            </div>
+        </div>
+    </div>
     <script>
         irb_image_focus.link('.demo', {
             inputFile: 'profile',
             inputPos: 'profile_pos',
+        });
+        irb_image_focus.link('.demo2', {
+            inputFile: 'profile2',
+            inputPos: 'profile_pos2',
         });
     </script>
 </body>
